--- a/WFGL/TODO.txt
+++ b/WFGL/TODO.txt
@@ -1,5 +1,5 @@
 ﻿>> TODO:
-	Better colliding support (and remove so much statics from 'Game' in DemoGame project)
+	Better colliding support 
 	Code clean up
 	Camera ⚙️
 	Canvas and more ui ⚙️
