--- a/WFGL/TODO.txt
+++ b/WFGL/TODO.txt
@@ -1,14 +1,15 @@
 ﻿>> TODO:
-	Better colliding support 
-	Code clean up
+	make rotation work
+	rework object managment (and refs)
 	Camera ⚙️
 	Canvas and more ui ⚙️
 	More Phisics
 	Grid, tiled sprites
 	Optimalizations ⚙️
+	3D transforms, and meshes
+	Materials
 
 >> Don't ask me what I drank
-	Particle system
+	Particle system (pre-rendered)
 	Lighting system / PseudoLight (with blending) ⚙️
-	Raycasting
 	Postprocessing
